mysqldeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: williambanks/william:v1.1
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: mysql-pvc
