phpservice.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: php
  name: php
  namespace: william
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: php
  type: ClusterIP
status:
  loadBalancer: {}
