ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: natwest-applications
spec:
  ingressClassName: httpd
  rules:
  - host: www.wbwebapp.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: php
            port:
              number: 80
